# orchestrator

./: .gitignore  CMakeLists.txt  README.md
DSPatch/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  install_manifest.txt
OrchestraComponents/: CMakeLists.txt
OrchestraComponents/Adder/: CMakeLists.txt  OrchAdderComponent.cpp  OrchAdderComponent.h
OrchestraComponents/Gain/: CMakeLists.txt  OrchGainComponent.cpp  OrchGainComponent.h
OrchestraComponents/MidiKeyProducer/: CMakeLists.txt  OrchMidiKeyProducer.h
OrchestraComponents/MidiOutput/: CMakeLists.txt  OrchMidiOutputComponent.cpp  OrchMidiOutputComponent.h
OrchestraComponents/MidiTextToKey/: CMakeLists.txt  OrchMidiTextToKeyComponent.h
OrchestraComponents/MqttSource/: CMakeLists.txt  OrchMqttSourceComponent.cpp  OrchMqttSourceComponent.h
OrchestraComponents/StreamReader/: CMakeLists.txt  OrchStreamReaderComponent.cpp  OrchStreamReaderComponent.h
OrchestraComponents/StreamWriter/: CMakeLists.txt  OrchStreamWriterComponent.cpp  OrchStreamWriterComponent.h
OrchestraComponents/Sum/: CMakeLists.txt  OrchSumComponent.h
OrchestraCore/: CMakeLists.txt
OrchestraCore/include/: AppKernel.h  Orchestrator.h
OrchestraCore/src/: AppKernel.cpp  Orchestrator.cpp
OrchestraGUI/: CMakeLists.txt
OrchestraGUI/include/: DsprController.h  DsprParam.h
OrchestraGUI/src/: DsprController.cpp  DsprParam.cpp  main.cpp
OrchestraSimulator/: CMakeLists.txt
OrchestraSimulator/include/: MockSensor.h
OrchestraSimulator/src/: MockSensor.cpp  main.cpp
RtMidi/: CMakeLists.txt
RtMidi/src/: RtMidi.cpp
mosquitto/: install_manifest.txt
mosquitto/client/: Makefile  cmake_install.cmake  mosquitto_pub  mosquitto_sub
mosquitto/lib/: Makefile  cmake_install.cmake
mosquitto/lib/cpp/: Makefile
mosquitto/man/: Makefile  cmake_install.cmake
mosquitto/src/: Makefile  mosquitto
src/libs/mosquitto/: CMakeCache.txt  Makefile  cmake_install.cmake
src/libs/mosquitto/lib/cpp/: cmake_install.cmake
src/libs/mosquitto/src/: cmake_install.cmake
src/mockDataSimulator/: CMakeLists.txt  MockSensor.cpp  main.cpp
src/orchestra/: CMakeLists.txt  main.cpp
src/orchestra/component/: OrchAdderComponent.cpp  OrchMidiKeyProducer.cpp  OrchMidiOutputComponent.cpp  OrchMidiOutputComponent.h  OrchMidiTextToKeyComponent.cpp  OrchMidiTextToKeyComponent.h  OrchMqttSourceComponent.cpp  OrchMqttSourceComponent.h  OrchStreamReaderComponent.cpp  OrchStreamReaderComponent.h  OrchStreamWriterComponent.cpp  OrchStreamWriterComponent.h  OrchSumComponent.cpp
src/orchestra/midi/: midi.h
